tests/parser-test-files/define.txt
================================================================================
Unknown type
================================================================================

(package coalton-unit-test/define)

(declare f (unknown -> ufix))
(define (f x) x)

--------------------------------------------------------------------------------

error: Unknown type
  --> test:3:12
   |
 3 |  (declare f (unknown -> ufix))
   |              ^^^^^^^ unknown type UNKNOWN
